--- a/example/css/main.css
+++ b/example/css/main.css
@@ -2,6 +2,7 @@
     position: relative;
     width: 500px;
     height: 500px;
+    float: left;
 }
 
 #main-canvas {
@@ -18,8 +19,11 @@
 }
 
 #ranking-list {
-    width: 300px;
+    width: 200px;
     height: 500px;
+    overFlow-y:scroll;
+    border:1px solid blue;
+    float: left;
 }
 
 #options {
